Fix top alignment of header logo

--- a/app/assets/stylesheets/bootstrap/navbar.scss
+++ b/app/assets/stylesheets/bootstrap/navbar.scss
@@ -73,7 +73,7 @@ $dropDown       : false;
    position: absolute;
    left: 50%;
    margin-left: -18px;
-   top: 7px;
+   top: 10px;
    transition-duration: .3s;
    z-index: 999;
 }
